# img-to-ascii

./: Cargo.toml  README.md  test.txt
src/: ascii_image.rs  brightness_modulation.rs  main.rs
