[package]
name = "img-to-ascii"
version = "0.1.2"
edition = "2021"
authors = ["myselfleo <myselfleo@outlook.fr>"]
license = "Apache-2.0"
description = "A very small ascii art generator"
readme = "README.md"
homepage = "https://github.com/MyselfLeo/img-to-ascii"
repository = "https://github.com/MyselfLeo/img-to-ascii"
keywords = ["cli", "ascii"]
categories = ["command-line-utilities"]

[dependencies]
image = "0.23.14"
clap = {version = "3.0.7", features = ["derive"]}